--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.555.0",
     "mongoose": "^8.20.1",
     "next": "15.5.5",
     "react": "19.1.0",
